# os-labs

./: CMakeLists.txt  README.md
01/: CMakeLists.txt  main.c
01/doc/: 1.docx
01/include/: utils.h
01/src/: child1.c  child2.c  utils.c
02/: CMakeLists.txt  main.c
02/doc/: 2.docx
02/include/: bitonic_data.h  bitonic_sort.h  globals.h  utils.h
02/src/: bitonic_data.c  bitonic_sort.c  globals.c
03/: CMakeLists.txt  main.c
03/doc/: 3.docx
03/include/: utils.h
03/src/: child1.c  child2.c  parent.c  utils.c
04/: CMakeLists.txt  main_dynamic.c  main_static.c
04/doc/: 4.docx
04/include/: contract.h
04/src/: lib1.c  lib2.c
05-07/: CMakeLists.txt  client.cpp  main.cpp  tree.cpp  tree.hpp
05-07/doc/: 567.docx
05-07/include/: common.h  manager.h
05-07/src/: common.cpp  globals.cpp  manager.cpp  node.cpp
08/: 8.docx
cp/: CMakeLists.txt  client.cpp  server.cpp
cp/doc/: cp.docx
tests/: CMakeLists.txt  lab1_test.cpp  lab2_test.cpp  lab3_test.cpp  lab4_test.cpp  lab5_test.cpp
